поменяли цвета, поменяли иконку, сделали всю работу

--- a/pr08_nat&kate_git/pr08_nat&kate_git.csproj
+++ b/pr08_nat&kate_git/pr08_nat&kate_git.csproj
@@ -78,6 +78,9 @@
     <EmbeddedResource Include="Guest.resx">
       <DependentUpon>Guest.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Manager.resx">
+      <DependentUpon>Manager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
